methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:32: error: expected class or object definition
def ligne() {
^MethodsPicture:41: error: Unmatched closing brace '}' ignored here
}
^